--- a/Metrics_analysis.ipynb
+++ b/Metrics_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import textstat\n",
     "\n",
     "from speakleash import Speakleash\n",
+    "from ttictoc import tic,toc\n",
     "from time import sleep\n",
     "from tqdm.notebook import tqdm, trange\n",
     "\n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,10 +158,13 @@
     "\n",
     "\n",
     "def add_pos_counts(df, pos_dict):    \n",
-    "    for key, value in pos_dict.items():        \n",
+    "    for key, value in pos_dict.items():  \n",
+    "        tic()\n",
     "        df[key] = df['pos_tag'].apply(lambda x: len([1 for tag in x if tag.endswith(value)]))        \n",
     "        new_col = f'{key}_ratio'        \n",
     "        df[new_col] = add_ratio(df[key])\n",
+    "        elapsed = toc()\n",
+    "        print(new_col, elapsed)\n",
     "    return df\n"
    ]
   },
@@ -170,8 +174,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tic()\n",
     "df['pos_tag'] =  df['text'].apply(lambda x: [token.pos_ for token in nlp(x)])\n",
-    "\n",
+    "elapsed = toc()\n",
+    "print('Elapsed time:', elapsed)\n",
     "    \n",
     "\n",
     "with open(\"df_pos_added.pkl\",\"wb\") as f:\n",
@@ -482,6 +488,13 @@
     "with open(\"df_feat_added_full.pkl\",\"wb\") as f:\n",
     "    pickle.dump(df, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
