Add CamelCase detection and comments to Levensthein notebook

--- a/Text_similarity_Levensthein.ipynb
+++ b/Text_similarity_Levensthein.ipynb
@@ -8,14 +8,14 @@
    },
    "outputs": [],
    "source": [
+    "#!pip install levenshtein\n",
+    "\n",
     "import Levenshtein as lev\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
     "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "#!pip install levenshtein"
+    "import plotly.graph_objects as go"
    ]
   },
   {
@@ -26,6 +26,8 @@
    },
    "outputs": [],
    "source": [
+    "# Dataframe download\n",
+    "\n",
     "with open(\"df_feat_added_full.pkl\",\"rb\") as f:\n",
     "    df = pickle.load(f)"
    ]
@@ -69,6 +71,8 @@
    },
    "outputs": [],
    "source": [
+    "#Looking for documents with similar parameters (length, wordcount etc.)\n",
+    "\n",
     "compare_df = df[['name', 'text', 'length', 'sentences', 'words', 'prop_nouns']][df[['length', 'sentences', 'words', 'prop_nouns']].duplicated(keep=False) == True]"
    ]
   },
@@ -256,17 +260,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a dictionary, key: sentences count, values: strings of the same num of sentences.\n",
+    "# Levensthein formula will be calculated for each value (list of strings) separately.\n",
+    "\n",
     "def list_strings(df,col):\n",
     "    strdict = {}\n",
     "    for i in set(df[col].values):\n",
     "        strdict[i] = df['text'][df[col] == i].values.tolist()\n",
     "    return strdict\n",
     "\n",
+    "# Creating a \"median\" string for each value.\n",
+    "\n",
     "def get_lev_median(strdict):\n",
     "    median_dict = dict()\n",
     "    for key, value in strdict.items():\n",
     "         median_dict[key] = lev.quickmedian(value)\n",
     "    return median_dict\n",
+    "\n",
+    "#Adding median value to the existing dataframe\n",
     "\n",
     "def add_to_df(x):\n",
     "    for key, value in median_dict.items():\n",
@@ -293,6 +304,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Counting levensthein ratio\n",
+    "\n",
     "compare_df['lev_zip'] = list(zip(compare_df['median_str'].values, compare_df['text'].values))"
    ]
   },
@@ -6912,6 +6925,8 @@
     }
    ],
    "source": [
+    "# It seems that shorter documents with small proper nouns count in our set are most likely to be duplicates.\n",
+    "\n",
     "fig = px.scatter_polar(compare_df, r=compare_df['lev_ratio'], theta=compare_df['prop_nouns'], color=compare_df['sentences'], color_continuous_scale=px.colors.cyclical.HSV, template=\"plotly_dark\")\n",
     "fig.show()"
    ]
