--- a/Text_similarity_Levensthein.ipynb
+++ b/Text_similarity_Levensthein.ipynb
@@ -371,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"compare_df\",\"wb\") as f:\n",
+    "with open(\"compare_df.pkl\",\"wb\") as f:\n",
     "    pickle.dump(compare_df, f)"
    ]
   },
