--- a/DataFrame_prep.ipynb
+++ b/DataFrame_prep.ipynb
@@ -25,20 +25,34 @@
    "source": [
     "base_dir = os.path.join(os.path.dirname(\"web_artykuły_religia\"))\n",
     "replicate_to = os.path.join(base_dir, \"datasets/religia\")\n",
-    "sl = Speakleash(replicate_to)\n",
-    "# ds = sl.get(\"web_artykuły_religia\").data"
+    "sl = Speakleash(replicate_to)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# ds = sl.get(\"web_artykuły_religia\").data\n",
     "# for doc in ds:\n",
     "#     random_string = ''.join(random.choices(string.ascii_uppercase + string.digits, k=20))\n",
     "#     with open(\"datasets/religia/\"+random_string+\".txt\", 'w', encoding = \"utf-8\") as f:\n",
-    "#         f.write(doc)"
+    "#         f.write(doc)\n",
+    "\n",
+    "# def get_meta(ds, lst=[]):\n",
+    "#     for doc in ds:  \n",
+    "#         txt, meta = doc\n",
+    "#         lst.append(meta)\n",
+    "#     return lst\n",
+    "\n",
+    "# def get_text(ds, lst=[]):\n",
+    "#     for doc in ds:  \n",
+    "#         txt, meta = doc\n",
+    "#         lst.append(txt)\n",
+    "#     return lst"
    ]
   },
   {
@@ -47,18 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def get_meta(lst=[], ds):\n",
-    "#     for doc in ds:  \n",
-    "#         txt, meta = doc\n",
-    "#         lst.append(meta)\n",
-    "#     return lst\n",
-    "\n",
-    "# def get_text(lst=[], ds):\n",
-    "#     for doc in ds:  \n",
-    "#         txt, meta = doc\n",
-    "#         lst.append(txt)\n",
-    "#     return lst\n",
-    "\n",
     "def get_data(ds):\n",
     "    lst1 = []\n",
     "    lst2 = []\n",
